Adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -10,5 +10,6 @@
     <h1>Olá, Mundo</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, laborum dicta praesentium eos laudantium tempora illum fuga nam unde tenetur excepturi qui soluta hic dignissimos incidunt, odit ipsum, officiis eum?</p>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio <p>cumque veniam dicta doloribus porro, culpa consequuntur, illo, ipsum vitae fugit at! Deleniti ipsum exercitationem cumque asperiores nihil ex rem omnis!</p>
 </body>
 </html>
